cmake_minimum_required(VERSION 3.24)
project(Sorting)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sorting main.cpp Sorting.h InsertionSort.cpp SelectionSort.cpp CountSort.cpp Homework1__Medium_to_Hard/InsertionSort_V2.cpp Homework2__Easy_to_Medium/Minimum_Absolute_Difference_1200.cpp Homework2__Easy_to_Medium/Largest_Perimeter_Triangle_976.cpp Homework2__Easy_to_Medium/Array_Partition_561.cpp Homework2__Easy_to_Medium/Wiggle_Sort_280.cpp Homework2__Easy_to_Medium/Eliminate_Maximum_Number_of_Monsters_1921.cpp Homework2__Easy_to_Medium/Maximize_Sum_Of_Array_After_K_Negations_1005.cpp Homework1__Medium_to_Hard/Sort_an_Array__912.cpp Homework1__Medium_to_Hard/CountSort_For_Strings_V1.cpp Homework1__Medium_to_Hard/CountSort_For_Strings_V2.cpp Homework1__Medium_to_Hard/Sort_an_Array_n2.cpp)
